# internal/api/api_utils/template_utils.go
@@ -54,35 +54,42 @@ func GetTemplateDetails(templateId string, user *model.User) (*apiclient.Templat
 	}
 
 	data := &apiclient.TemplateDetails{
-		TemplateId:       template.Id,
-		Name:             template.Name,
-		Description:      template.Description,
-		Job:              template.Job,
-		Volumes:          template.Volumes,
-		Usage:            total,
-		Hash:             template.Hash,
-		Deployed:         deployed,
-		Groups:           template.Groups,
-		Zones:            template.Zones,
-		Platform:         template.Platform,
-		IsManaged:        template.IsManaged,
-		WithTerminal:     template.WithTerminal,
-		WithVSCodeTunnel: template.WithVSCodeTunnel,
-		WithCodeServer:   template.WithCodeServer,
-		WithSSH:          template.WithSSH,
-		WithRunCommand:   template.WithRunCommand,
-		StartupScriptId:  template.StartupScriptId,
-		ShutdownScriptId: template.ShutdownScriptId,
-		ScheduleEnabled:  template.ScheduleEnabled,
-		AutoStart:        template.AutoStart,
-		Schedule:         make([]apiclient.TemplateDetailsDay, 7),
-		ComputeUnits:     template.ComputeUnits,
-		StorageUnits:     template.StorageUnits,
-		Active:           template.Active,
-		MaxUptime:        template.MaxUptime,
-		MaxUptimeUnit:    template.MaxUptimeUnit,
-		IconURL:          template.IconURL,
-		CustomFields:     make([]apiclient.CustomFieldDef, len(template.CustomFields)),
+		TemplateId:               template.Id,
+		Name:                     template.Name,
+		Description:              template.Description,
+		Job:                      template.Job,
+		Volumes:                  template.Volumes,
+		Usage:                    total,
+		Hash:                     template.Hash,
+		Deployed:                 deployed,
+		Groups:                   template.Groups,
+		Zones:                    template.Zones,
+		Platform:                 template.Platform,
+		IsManaged:                template.IsManaged,
+		WithTerminal:             template.WithTerminal,
+		WithVSCodeTunnel:         template.WithVSCodeTunnel,
+		WithCodeServer:           template.WithCodeServer,
+		WithSSH:                  template.WithSSH,
+		WithRunCommand:           template.WithRunCommand,
+		StartupScriptId:          template.StartupScriptId,
+		ShutdownScriptId:         template.ShutdownScriptId,
+		ScheduleEnabled:          template.ScheduleEnabled,
+		AutoStart:                template.AutoStart,
+		Schedule:                 make([]apiclient.TemplateDetailsDay, 7),
+		ComputeUnits:             template.ComputeUnits,
+		StorageUnits:             template.StorageUnits,
+		Active:                   template.Active,
+		MaxUptime:                template.MaxUptime,
+		MaxUptimeUnit:            template.MaxUptimeUnit,
+		IconURL:                  template.IconURL,
+		CustomFields:             make([]apiclient.CustomFieldDef, len(template.CustomFields)),
+		HealthCheckType:          template.HealthCheckType,
+		HealthCheckConfig:        template.HealthCheckConfig,
+		HealthCheckSkipSSLVerify: template.HealthCheckSkipSSLVerify,
+		HealthCheckTimeout:       template.HealthCheckTimeout,
+		HealthCheckInterval:      template.HealthCheckInterval,
+		HealthCheckMaxFailures:   template.HealthCheckMaxFailures,
+		HealthCheckAutoRestart:   template.HealthCheckAutoRestart,
 	}
 
 	// Handle schedule
